# xFetch

./: .gitignore  .gitlab-ci.yml  .woodpecker.yml  Cargo.toml  README.md  build.sh
.github/workflows/: rust.yml  test.yml
src/: macros.rs  main.rs  packages.rs  uptime.rs
