[package]
name = "xfetch"
version = "3.4.0"
edition = "2021"

[dependencies]
uptime_lib = "0.3.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.optimized-build]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
opt-level = 0
